--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "markdown-it": "^12.1.0",
     "markdown-it-anchor": "^8.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "markdown-it-for-inline": "^0.1.1"
+  }
 }
