--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "markdown-it-anchor": "^8.1.2"
   },
   "dependencies": {
+    "eleventy-plugin-toc": "^1.1.5",
     "markdown-it-for-inline": "^0.1.1"
   }
 }
